--- a/products.css
+++ b/products.css
@@ -4,8 +4,9 @@
   box-sizing: border-box;
 }
 
-.body {
-  font-family: monospace;
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .header {
@@ -25,28 +26,103 @@
 
 .header__button {
   display: inline-block;
-  outline: none;
+  outline: 0;
   cursor: pointer;
-  font-size: 14px;
-  line-height: 1;
-  border-radius: 500px;
-  transition-property: background-color, border-color, color, box-shadow, filter;
-  transition-duration: 0.3s;
-  border: 1px solid transparent;
-  letter-spacing: 2px;
-  min-width: 110px;
-  text-transform: uppercase;
-  white-space: normal;
-  font-weight: 700;
+  border: 2px solid #000;
+  border-radius: 3px;
+  color: #000;
+  background: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 19px;
+  padding: 12px 12px;
   text-align: center;
-  padding: 16px 14px 18px;
-  color: #616467;
-  box-shadow: inset 0 0 0 2px #616467;
-  background-color: transparent;
-  height: 48px;
+  transition-duration: 0.15s;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header__button:hover {
-  color: #fff;
-  background-color: #616467;
+  background: rgb(251, 193, 245);
+}
+
+.page__title {
+  width: 100%;
+  padding: 12px 12px;
+  align-items: center;
+}
+
+.page__container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 24px;
+}
+
+.products {
+  display: flex;
+  flex-direction: column;
+  gap: 55px;
+}
+
+.product {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+}
+
+.product__img {
+  height: 250px;
+}
+
+.product__name {
+  font-weight: 900;
+}
+
+.product__button {
+  display: inline-block;
+  outline: 0;
+  cursor: pointer;
+  border: 2px solid #000;
+  border-radius: 3px;
+  color: #000;
+  background: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 19px;
+  padding: 12px 12px;
+  text-align: center;
+  transition-duration: 0.15s;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.product__button:hover {
+  background: #fbc1f5;
+}
+
+.footer {
+  width: 100%;
+  background-color: #fbc1f5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  margin-top: 60px;
+  font-weight: 600;
+  padding: 10px;
+}
+
+.footer__img {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  padding: 10px;
+}
+
+.footer__fb {
+  height: 20px;
 }
