--- a/products.css
+++ b/products.css
@@ -47,9 +47,8 @@ body {
 }
 
 .page__title {
-  width: 100%;
-  padding: 12px 12px;
-  align-items: center;
+  margin-bottom: 24px;
+  text-align: center;
 }
 
 .page__container {
@@ -63,7 +62,9 @@ body {
 .products {
   display: flex;
   flex-direction: column;
-  gap: 55px;
+  gap: 56px;
+  width: 100%;
+  list-style: none;
 }
 
 .product {
@@ -123,6 +124,29 @@ body {
   padding: 10px;
 }
 
-.footer__fb {
+.footer__link {
   height: 20px;
+}
+
+@media screen and (min-width: 900px) {
+  .header {
+    padding: 30px 60px;
+  }
+
+  .products {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  .product {
+    width: 28%;
+    max-width: 320px;
+  }
+
+  .cosa {
+    flex: 1;
+  }
 }
